camo-derive/tests/cases/explicit_discriminant.stderr
error: `camo` does not support explicit discriminants
 --> tests/cases/explicit_discriminant.rs:5:11
  |
5 |     One = 1,
  |           ^
